# minalinsky_img

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  main.c
src/: Makefile.am  Makefile.in  main.c  net.c  net.h  parser.c  parser.h  str.c  str.h
